--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "bpmn-js": "^0.28.1",
+    "bpmn-moddle": "^3.0.0",
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
