--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boilerplate-react-app",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Changiz Hosseini",
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack",
@@ -21,6 +21,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "bootstrap": "^4.0.0",
     "bpmn-js": "^0.28.1",
     "bpmn-moddle": "^3.0.0",
     "css-loader": "0.28.4",
